--- a/css/main.css
+++ b/css/main.css
@@ -157,6 +157,7 @@ body {
   background-size: cover;
   width: 100%;
   height: 50rem;
+  object-fit: cover;
   filter: brightness(50%);
 }
 .part1 .top-menu {
